Fixed #32391 -- Used CSS flex properties for changelist filter.
Matched layout adjustment using flex from admin sidebar added in
d24ba1be7a53a113d19e2860c03aff9922efec24.

Filters would become squashed when viewport was
constrained or list display table became too wide.

--- a/django/contrib/admin/static/admin/css/changelists.css
+++ b/django/contrib/admin/static/admin/css/changelists.css
@@ -128,8 +128,8 @@
 /* FILTER COLUMN */
 
 #changelist-filter {
+    flex: 0 0 240px;
     order: 1;
-    width: 240px;
     background: var(--darkened-bg);
     border-left: none;
     margin: 0 0 0 30px;
